base/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-db
  labels:
    app: example-app-db
spec:
  selector:
    matchLabels:
      app: example-app-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: example-app-db
    spec:
      containers:
        - image: mariadb:10
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: example-app-db-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: example-app-db
spec:
  ports:
  - port: 3306
  selector:
    app: example-app-db
  clusterIP: None
