base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example-app.localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: example-app
            port:
              name: http
